--- a/src/css/style.css
+++ b/src/css/style.css
@@ -13,6 +13,12 @@
   --color-secondary-darken: #405cc2;
 }
 
+*, *:before, *:after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
@@ -55,7 +61,7 @@ body {
   overflow: hidden;
 }
 
-ul, li {
+ul {
   list-style: none;
   margin: 0;
   padding: 0;
