--- a/src/css/style.css
+++ b/src/css/style.css
@@ -181,7 +181,7 @@ h1 {
 
 /* ===== MAIN ===== */
 .main {
-  padding: 30px;
+  padding: 20px 30px;
 }
 
 .currency__from {
@@ -200,6 +200,11 @@ h1 {
   border: none;
   border-radius: 5px;
   font-weight: 600;
+}
+
+[data-theme=dark] .currency__button:hover, 
+[data-theme=dark] .currency__button:focus {
+  color: var(--color-primary);
 }
 
 .currency__button--to {
