--- a/src/css/style.css
+++ b/src/css/style.css
@@ -23,6 +23,8 @@
 }
 
 *, *:before, *:after {
+  --webkit-tap-highlight-color: transparent;
+  font-family: "Poppins", sans-serif;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
@@ -38,13 +40,6 @@ input::-webkit-inner-spin-button {
 /* Firefox */
 input[type=number] {
   -moz-appearance: textfield;
-}
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
 }
 
 ::selection {
