--- a/src/css/style.css
+++ b/src/css/style.css
@@ -23,6 +23,8 @@
 }
 
 *, *:before, *:after {
+  --webkit-tap-highlight-color: transparent;
+  
   box-sizing: border-box;
   margin: 0;
   padding: 0;
